Tweak multiline behaviour. Fixes #22. Also change alignment. Fixes #21
Also, since I've updated my version of SASS, it wants to change from
hexes to colour names apparently.

--- a/res/css/friendly.css
+++ b/res/css/friendly.css
@@ -220,7 +220,7 @@ td.docs {
 td.code {
   padding: 8px 15px 8px 25px;
   width: 100%;
-  vertical-align: bottom;
+  vertical-align: top;
   border-left: 1px solid; }
 
 .background {
