--- a/res/css/pastie.css
+++ b/res/css/pastie.css
@@ -220,7 +220,7 @@ td.docs {
 td.code {
   padding: 8px 15px 8px 25px;
   width: 100%;
-  vertical-align: bottom;
+  vertical-align: top;
   border-left: 1px solid; }
 
 .background {
@@ -249,7 +249,7 @@ pre, tt, code {
 
 /* All the stuff that can depend on colour scheme goes below here: */
 body {
-  background: #f8f8ff;
+  background: ghostwhite;
   color: #2f2f24; }
 
 a {
@@ -283,7 +283,7 @@ a {
     background: #d8d8dc; }
 
 .docs.markdown {
-  background: #f8f8ff; }
+  background: ghostwhite; }
 .docs pre {
   border-color: #d8d8dc; }
 .docs p tt, .docs p code, .docs li tt, .docs li code {
