--- a/res/css/vim.css
+++ b/res/css/vim.css
@@ -220,7 +220,7 @@ td.docs {
 td.code {
   padding: 8px 15px 8px 25px;
   width: 100%;
-  vertical-align: bottom;
+  vertical-align: top;
   border-left: 1px solid; }
 
 .background {
@@ -264,7 +264,7 @@ a {
   background: #1a1a1a;
   border-bottom-color: #2c2c2c; }
   #sidebar_switch span {
-    color: #f5f5f5; }
+    color: whitesmoke; }
   #sidebar_switch span:hover {
     background: #131313; }
   #sidebar_switch .selected {
